--- a/hw01/index.html
+++ b/hw01/index.html
@@ -214,13 +214,13 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      <a href="https://github.com/tjhsieh/vis2023f/hw01/src-easy/">https://github.com/GlennWang/vis2023f/hw01/src-easy/</a>
+      <a href="https://github.com/GlennWang/vis2023f/hw01/src-easy/">https://github.com/GlennWang/vis2023f/hw01/src-easy/</a>
       <hr>
-      <a href="https://github.com/tjhsieh/vis2023f/hw01/src-medium-v3/">https://github.com/GlennWang/vis2023f/hw01/src-medium-v3/</a>
+      <a href="https://github.com/GlennWang/vis2023f/hw01/src-medium-v3/">https://github.com/GlennWang/vis2023f/hw01/src-medium-v3/</a>
       <hr>
-      <a href="https://github.com/tjhsieh/vis2023f/hw01/src-medium-v7/">https://github.com/GlennWang/vis2023f/hw01/src-medium-v7/</a>
+      <a href="https://github.com/GlennWang/vis2023f/hw01/src-medium-v7/">https://github.com/GlennWang/vis2023f/hw01/src-medium-v7/</a>
       <hr>
-      <a href="https://github.com/tjhsieh/vis2023f/hw01/src-strong/">https://github.com/GlennWang/vis2023f/hw01/src-strong/</a>
+      <a href="https://github.com/GlennWang/vis2023f/hw01/src-strong/">https://github.com/GlennWang/vis2023f/hw01/src-strong/</a>
     </div>
   </div>
 
@@ -253,7 +253,7 @@
         </tr>
         <tr>
           <td rowspan="4" id="myTotal"></td>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox1"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox1" checked></td>
           <td id='m1'>2</td>
           <td>Simple baseline - 產生 Dummy CSV 虛構成績表</td>
         </tr>
