--- a/hw01/src-easy/index.html
+++ b/hw01/src-easy/index.html
@@ -4,6 +4,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="icon" href="../../hw00/favicon.svg"/>
     <style type="text/css">
       table,
       th,
