HW09 experience and HW04

--- a/hw09/index.html
+++ b/hw09/index.html
@@ -200,7 +200,9 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      我覺得這份作業是很特別的體驗，事前看到畫作檔案與介紹等比較像是在看書或畫冊的感覺，放到Unity中製作虛擬解說影片就是一種把想像具現化的過程（雖然是在虛擬世界中），而到師大美術館現場看到畫作本體又是另一種感受，有種終於見到本尊很不可思議的感覺。
+      這次的作業跨越了很長的一段時間終於完成了，在這之中學會了vibe、unity、Audacity、剪輯軟體davinci。首先vibe把正式版影片動作捕捉，然後再用ffmpeg轉成動作檔。
+      然後一樣用ffmpeg把mp4變成mp3，丟到Audacity一通操作把噪音去掉了一點。之後再用unity一通操作錄製影片。最後再丟到davinci一通操作完成左右對照。
+      學到了很多。
     </div>
   </div>
 
