--- a/hw03/index.html
+++ b/hw03/index.html
@@ -223,7 +223,8 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      這次的作業遇到的困難：1. 讀取JSON檔案並回撥自己的路徑以及行走時間、距離、卡路里等資料。2. 在Observable上將班級人員資料呈現在台灣地圖上。3.要很清楚知道檔案資料的位置，不然畫面會呈現不出來。
+      這一次的作業讓我深刻體會到了數據可視化的樂趣。那天在師大美術館趴趴走的路徑，雖然不知道這個究竟準不準確，但竟然可以這樣呈現出來。而且還可以放出距離跟卡路里的資訊，雖然不知道實際上是不是真的那樣消耗。
+      最後，創建人口面量圖 Choropleth 讓我感受到數據如何在地理位置上生動展現，同學大多集中在北部，換一個班級的資料估計也會這樣。
     </div>
   </div>
 
@@ -257,7 +258,7 @@
         </tr>
         
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox4" ></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox4" checked></td>
           <td id='m4'>4</td>
           <td>Strong baseline - 建立課程班上學生居住縣市人數的 Choropleth</td>
         </tr>
@@ -305,7 +306,7 @@
   <div class="row hw12">
     <div class="col-md-12 twenty">
       <iframe width="100%" height="500" frameborder="0" style="background-color: #FFFFFF"
-        src=""></iframe>
+        src="https://observablehq.com/embed/e8654e99cbb3c00d?cells=taiwan"></iframe>
     </div>
   </div>  
 
