--- a/hw07/index.html
+++ b/hw07/index.html
@@ -248,7 +248,7 @@
   <div class="row hw12">
     <div class="col-md-12 twenty">
       <video id="video1" style="width:100%;max-width:100%;" controls="">
-        <source src="./src/Demo_hw07_Strong.mp4" type="video/mp4">
+        <source src="./src/Demo_hw07_strong.mp4" type="video/mp4">
       </video>
     </div>
   </div>
