--- a/hw08/index.html
+++ b/hw08/index.html
@@ -342,7 +342,7 @@
       <div class="row hw12">
         <div class="col-md-12 twenty">
           <h4><u>Simple baseline</u></h4>
-          <h4><u>使用執行檔觀看有氧漫遊圖表回答問題(2pt)</u></h4>
+          <h4><u>使用影片檔觀看有氧漫遊圖表回答問題(2pt)</u></h4>
           <h5>
             1. 回答數總計最高的是哪個問題哪個選項? (1pt)
           </h5>
