--- a/hw08/index.html
+++ b/hw08/index.html
@@ -398,7 +398,8 @@
             2. 經過你的推斷，甚麼原因可能造成其與實際修課人數有落差?(1pt)
           </h5>
           <h5 style="color: red;">
-            Answer: 同學沒來，或者來了卻沒填問卷。或者手機沒電。
+            Answer: 我看那個資料集裡面全部就是100個同學的資料，然而我上一題看每題都有170上下的回覆數。可能程式不小心多讀了一些，或者完全是我自己看錯。
+                    因為正常來說是要比同學人數要少的，因為可能手機沒電、沒來之類的。
           </h5>
           <h4><u>使用執行檔觀看主題遊圖表回答問題(1pt)</u></h4>
           <h5>
